java.base/unix/native/libjava/childproc.c "multiple definition" link errors with GCC10

XMLWordPrintable

    • b10
    • generic
    • linux

        === Output from failing command(s) repeated here ===
        * For target support_native_java.base_libjava_BUILD_LIBJAVA_link:
        build-10/support/native/java.base/libjava/childproc.o:(.bss+0x0): multiple definition of `parentPathv'
        build-10/support/native/java.base/libjava/ProcessImpl_md.o:(.bss+0x0): first defined here
        collect2: error: ld returned 1 exit status

        * All command lines available inbuild-10/make-support/failure-logs.
        === End of repeated output ===

              Assignee:
              Patrick Zhang (Inactive)
              Reporter:
              Patrick Zhang (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: