8238380: java.base/unix/native/libjava/childproc.c "multiple definition" link errors with GCC10

Reviewed-by: stuefe, clanger, rriggs